--- a/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
@@ -8209,10 +8209,11 @@ x.sc = -10;
 "@MMK_R_b" = 90;
 "@MMK_R_l" = 90;
 "@MMK_R_parenright" = 70;
-"@MMK_R_quoteleft" = 30;
+"@MMK_R_quoteleft" = 50;
 "@MMK_R_quoteright" = 40;
-"@MMK_R_quotesingle" = 30;
-question = 30;
+"@MMK_R_quotesingle" = 50;
+exclam = 30;
+question = 50;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -9213,6 +9214,13 @@ schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
 rhotichookmod = 60;
+};
+tcaron = {
+"@MMK_R_parenright" = 50;
+"@MMK_R_quoteleft" = 20;
+"@MMK_R_quotesingle" = 20;
+exclam = 20;
+question = 10;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
@@ -10566,11 +10574,12 @@ x.sc = -10;
 "@MMK_R_Z" = 80;
 "@MMK_R_b" = 90;
 "@MMK_R_l" = 90;
-"@MMK_R_parenright" = 70;
-"@MMK_R_quoteleft" = 30;
+"@MMK_R_parenright" = 80;
+"@MMK_R_quoteleft" = 40;
 "@MMK_R_quoteright" = 40;
-"@MMK_R_quotesingle" = 30;
-question = 30;
+"@MMK_R_quotesingle" = 70;
+exclam = 30;
+question = 40;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -11572,6 +11581,10 @@ rsubscript = {
 schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
+};
+tcaron = {
+"@MMK_R_parenright" = 40;
+"@MMK_R_quotesingle" = 20;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
@@ -12929,11 +12942,12 @@ x.sc = -10;
 "@MMK_R_Z" = 80;
 "@MMK_R_b" = 90;
 "@MMK_R_l" = 90;
-"@MMK_R_parenright" = 70;
+"@MMK_R_parenright" = 150;
 "@MMK_R_quoteleft" = 30;
 "@MMK_R_quoteright" = 40;
-"@MMK_R_quotesingle" = 30;
-question = 30;
+"@MMK_R_quotesingle" = 90;
+exclam = 30;
+question = 100;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -13935,6 +13949,11 @@ rsubscript = {
 schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
+};
+tcaron = {
+"@MMK_R_parenright" = 70;
+"@MMK_R_quotesingle" = 30;
+question = 40;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
@@ -15311,7 +15330,8 @@ x.sc = -10;
 "@MMK_R_quoteleft" = 30;
 "@MMK_R_quoteright" = 40;
 "@MMK_R_quotesingle" = 30;
-question = 30;
+exclam = 30;
+question = 40;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -16344,6 +16364,13 @@ schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
 rhotichookmod = 40;
+};
+tcaron = {
+"@MMK_R_parenright" = 50;
+"@MMK_R_quoteleft" = 20;
+"@MMK_R_quotesingle" = 20;
+exclam = 20;
+question = 10;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
@@ -17715,11 +17742,12 @@ x.sc = -10;
 "@MMK_R_Z" = 80;
 "@MMK_R_b" = 90;
 "@MMK_R_l" = 90;
-"@MMK_R_parenright" = 70;
-"@MMK_R_quoteleft" = 30;
+"@MMK_R_parenright" = 90;
+"@MMK_R_quoteleft" = 50;
 "@MMK_R_quoteright" = 40;
-"@MMK_R_quotesingle" = 30;
-question = 30;
+"@MMK_R_quotesingle" = 80;
+exclam = 30;
+question = 60;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -18745,6 +18773,11 @@ rsubscript = {
 schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
+};
+tcaron = {
+"@MMK_R_parenright" = 30;
+"@MMK_R_quotesingle" = 20;
+question = 10;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
@@ -20117,11 +20150,12 @@ x.sc = -10;
 "@MMK_R_Z" = 80;
 "@MMK_R_b" = 90;
 "@MMK_R_l" = 90;
-"@MMK_R_parenright" = 70;
-"@MMK_R_quoteleft" = 30;
+"@MMK_R_parenright" = 120;
+"@MMK_R_quoteleft" = 40;
 "@MMK_R_quoteright" = 40;
-"@MMK_R_quotesingle" = 30;
-question = 30;
+"@MMK_R_quotesingle" = 90;
+exclam = 40;
+question = 100;
 };
 "@MMK_L_de-cy" = {
 "@MMK_R_A-cy" = -20;
@@ -21159,6 +21193,11 @@ rsubscript = {
 schwa = {
 "@MMK_R_izhitsa-cy" = -20;
 "@MMK_R_u-cy" = -20;
+};
+tcaron = {
+"@MMK_R_parenright" = 70;
+"@MMK_R_quotesingle" = 40;
+question = 60;
 };
 underscore = {
 "@MMK_R_Che-cy" = -110;
